--- a/WebResumen/Views/AutoClaveI/Print.cshtml
+++ b/WebResumen/Views/AutoClaveI/Print.cshtml
@@ -1,428 +1,23 @@
-﻿@model WebResumen.Models.CiclosAutoclaves
+﻿@model IEnumerable<WebResumen.Models.CiclosAutoclaves>
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Confirmación de Impresion";
 }
 
-<h1>Details</h1>
+@{
+    Layout = "~/Views/Shared/_LayoutInicio.cshtml";
+}
 
-<div>
-    <h4>CiclosAutoclaves</h4>
 
-  
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IdAutoclave)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IdAutoclave)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IdSeccion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IdSeccion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tinicio)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tinicio)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NumeroCiclo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.NumeroCiclo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Programa)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Programa)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Modelo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Modelo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Programador)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Programador)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Operador)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Operador)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CodigoProducto)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CodigoProducto)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Lote)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Lote)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Notas)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Notas)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IdUsuario)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IdUsuario)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase1)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase1)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF1)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF1)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase2)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase2)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF2)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF2)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase3)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase3)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF3)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF3)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase4)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase4)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF4)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF4)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase5)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase5)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF5)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF5)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tif5)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tif5)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TisubF5)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TisubF5)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tff5)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tff5)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TfsubF5)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TfsubF5)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase6)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase6)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF6)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF6)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tif6)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tif6)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TisubF6)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TisubF6)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tff6)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tff6)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TfsubF6)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TfsubF6)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase7)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase7)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF7)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF7)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tif7)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tif7)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TisubF7)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TisubF7)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase8)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase8)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF8)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF8)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tif8)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tif8)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TisubF8)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TisubF8)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tff8)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tff8)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase9)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase9)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF9)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF9)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tif9)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tif9)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TisubF9)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TisubF9)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tff9)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tff9)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase10)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase10)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF10)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF10)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase11)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase11)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF11)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF11)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase12)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase12)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF12)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF12)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase13)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase13)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tff13)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tff13)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TfsubF13)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TfsubF13)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.HoraInicio)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.HoraInicio)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.HoraFin)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.HoraFin)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EsterilizacionN)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EsterilizacionN)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tminima)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tminima)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tmaxima)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tmaxima)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotal)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotal)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FtzMin)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FtzMin)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FtzMax)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FtzMax)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DifMaxMin)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DifMaxMin)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AperturaPuerta)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AperturaPuerta)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TiempoCiclo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TiempoCiclo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ErrorCiclo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ErrorCiclo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaRegistro)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FechaRegistro)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<tbody>
+
+    @using Microsoft.AspNetCore.Http
+    @inject IHttpContextAccessor httpContextAccessor
+    @*<h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")</h1>*@
+
+
+    <a type="button" class="btn btn-info" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosI")">Imprimir</a>
+
+
+</tbody>
+
