--- a/WebResumen/Views/AutoClaveJ/Print.cshtml
+++ b/WebResumen/Views/AutoClaveJ/Print.cshtml
@@ -1,420 +1,23 @@
-﻿@model WebResumen.Models.CiclosSabiDos
+﻿@model IEnumerable<WebResumen.Models.CiclosAutoclaves>
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Confirmación de Impresion";
 }
 
-<h1>Details</h1>
+@{
+    Layout = "~/Views/Shared/_LayoutInicio.cshtml";
+}
 
-<div>
-    <h4>CiclosSabiDos</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IdAutoclave)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IdAutoclave)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IdSeccion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IdSeccion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tinicio)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tinicio)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NumeroCiclo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.NumeroCiclo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Programa)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Programa)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Modelo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Modelo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Programador)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Programador)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Operador)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Operador)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CodigoProducto)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CodigoProducto)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Lote)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Lote)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Notas)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Notas)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IdUsuario)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IdUsuario)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase1)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase1)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF1)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF1)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase2)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase2)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF2)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF2)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tif2)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tif2)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TisubF2)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TisubF2)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tff2)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tff2)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TfsubF2)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TfsubF2)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase3)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase3)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF3)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF3)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tif3)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tif3)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TisubF3)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TisubF3)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tff3)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tff3)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TfsubF3)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TfsubF3)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase4)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase4)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF4)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF4)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tif4)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tif4)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TisubF4)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TisubF4)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase5)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase5)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF5)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF5)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase6)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase6)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF6)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF6)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase7A)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase7A)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF7a)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF7a)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase8A)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase8A)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF8a)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF8a)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase7B)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase7B)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF7b)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF7b)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase8B)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase8B)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF8b)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF8b)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase9)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase9)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF9)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF9)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tif9)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tif9)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TisubF9)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TisubF9)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tff9)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tff9)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase10)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase10)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF10)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF10)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase11)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase11)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotalF11)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotalF11)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fase12)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Fase12)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tif12)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tif12)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TisubF12)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TisubF12)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.HoraInicio)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.HoraInicio)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.HoraFin)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.HoraFin)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EsterilizacionN)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EsterilizacionN)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tminima)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tminima)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tmaxima)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tmaxima)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracionTotal)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DuracionTotal)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FtzMin)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FtzMin)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FtzMax)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FtzMax)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DifMaxMin)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DifMaxMin)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AperturaPuerta)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AperturaPuerta)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TiempoCiclo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TiempoCiclo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ErrorCiclo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ErrorCiclo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaRegistro)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FechaRegistro)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+
+<tbody>
+
+    @using Microsoft.AspNetCore.Http
+    @inject IHttpContextAccessor httpContextAccessor
+    @*<h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")</h1>*@
+
+
+    <a type="button" class="btn btn-info" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosJ")">Imprimir</a>
+
+
+</tbody>
+
