--- a/WebResumen/Views/AutoClaveK/Login.cshtml
+++ b/WebResumen/Views/AutoClaveK/Login.cshtml
@@ -1,7 +1,7 @@
-﻿@model WebResumen.Models.ViewModels.DoubleLoginParametrosViewModel
+﻿@model WebResumen.Models.ViewModels.DoubleLoginViewModel
 
 @{
-    ViewData["Title"] = "Confirmación de Cambio Valor";
+    ViewData["Title"] = "Confirmación de Impresion";
 }
 
 @{
@@ -12,7 +12,7 @@
 
 
 <div class="container justify-content-center mt-5">
-    <h5 class="justify-content-center">Confirmación de Usuario</h5>
+    <h5 class="justify-content-center">Login de Usuario</h5>
     <div class="row">
         <div class="col-md-6">
             <form method="post">
@@ -28,21 +28,14 @@
                     <span asp-validation-for="Contraseña" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Comentario"></label>
-                    @*<label>Motivo del Cambio</label>*@
+                    @*<label asp-for="Comentario"></label>*@
+                    <label>Motivo de la Reimpresión</label>
                     <input asp-for="Comentario" class="form-control" />
                     <span asp-validation-for="Comentario" class="text-danger"></span>
                 </div>
                 <div class="form-group">
 
-                    <input asp-for="Id" class="form-control" value="@ViewBag.datos.Id" type="hidden" />
-                    <input asp-for="ImpresoraSabiUno" class="form-control" value="@ViewBag.datos.ImpresoraSabiUno" type="hidden" />
-                    <input asp-for="ImpresoraSabiDos" class="form-control" value="@ViewBag.datos.ImpresoraSabiDos" type="hidden" />
-                    <input asp-for="RutaLog" class="form-control" value="@ViewBag.datos.RutaLog" type="hidden" />
-                    <input asp-for="Tiempo" class="form-control" value="@ViewBag.datos.Tiempo" type="hidden" />
-                    <input asp-for="Reinicio" class="form-control" value="@ViewBag.datos.Reinicio" type="hidden" />
-
-
+                    <input asp-for="Dato" class="form-control" value="@ViewBag.datos" type="hidden" />
 
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
