--- a/WebResumen/Views/MaestroAutoclave/Index.cshtml
+++ b/WebResumen/Views/MaestroAutoclave/Index.cshtml
@@ -9,7 +9,7 @@
 @*<p>
         <a asp-action="Create">Create New</a>
     </p>*@
-<div style="height: 500px; overflow: auto;">
+<div class="mt-4" style="height: 500px; overflow: auto;">
     <table class="table table-responsive-sm">
         <thead class="thead-dark">
             <tr>
