--- a/WebResumen/Views/MaestroAutoclave/Login.cshtml
+++ b/WebResumen/Views/MaestroAutoclave/Login.cshtml
@@ -12,7 +12,7 @@
 
 
 <div class="container justify-content-center mt-5">
-    <h5 class="justify-content-center">Confirmarción de Usuario</h5>
+    <h5 class="justify-content-center">Confirmación de Usuario</h5>
     <div class="row">
         <div class="col-md-6">
             <form method="post">
@@ -40,7 +40,7 @@
                     <input asp-for="Nombre" class="form-control" value="@ViewBag.maestro.Nombre" type="hidden" />
                     <input asp-for="Version" class="form-control" value="@ViewBag.maestro.Version" type="hidden" />
                     <input asp-for="Ip" class="form-control" value="@ViewBag.maestro.Ip" type="hidden" />
-                     <input asp-for="Seccion" class="form-control" value="@ViewBag.maestro.Seccion" type="hidden" />
+                    <input asp-for="Seccion" class="form-control" value="@ViewBag.maestro.Seccion" type="hidden" />
                     <input asp-for="Estado" class="form-control" value="@ViewBag.maestro.Estado" type="hidden" />
                     <input asp-for="UltimoCiclo" class="form-control" value="@ViewBag.maestro.UltimoCiclo" type="hidden" />
                     <input asp-for="RutaSalida" class="form-control" value="@ViewBag.maestro.RutaSalida" type="hidden" />
@@ -55,3 +55,6 @@
     </div>
 </div>
 
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+}
