--- a/WebResumen/Views/Shared/_LayoutLogin.cshtml
+++ b/WebResumen/Views/Shared/_LayoutLogin.cshtml
@@ -55,6 +55,8 @@
     <script src="~/js/AngularJSApp/AutoClaveA/Service.js" asp-append-version="true"></script>
 
 
-    @RenderSection("Scripts", required: false)
+    @RenderSection("Scripts", required: true)
+    
+
 </body>
 </html>
