Se agrega Login continuo, se cambia ViewBag por variables de session, se añade nombre autoclave al editar, se agrega validacion metadata del modelo y en los Edit se llama el Layout login con unobtrusive validation

--- a/WebResumen/Views/AutoClaveC/Print.cshtml
+++ b/WebResumen/Views/AutoClaveC/Print.cshtml
@@ -13,10 +13,10 @@
 
     @using Microsoft.AspNetCore.Http
     @inject IHttpContextAccessor httpContextAccessor
-    <h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")</h1>
+    @*<h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")</h1>*@
 
 
-    <a type="button" class="btn btn-info" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")">Imprimir</a>
+    <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")">Imprimir</a>
 
 
 </tbody>
