--- a/WebResumen/Views/AutoClaveD/Print.cshtml
+++ b/WebResumen/Views/AutoClaveD/Print.cshtml
@@ -16,7 +16,7 @@
     @*<h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")</h1>*@
 
 
-    <a type="button" class="btn btn-info" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosD")">Imprimir</a>
+    <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosD")">Imprimir</a>
 
 
 </tbody>
