--- a/WebResumen/Views/AutoClaveB/Login.cshtml
+++ b/WebResumen/Views/AutoClaveB/Login.cshtml
@@ -12,6 +12,20 @@
     @ViewBag.fail
 </h1>
 
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor httpContextAccessor
+@if (TempData["Fail"] != null)
+{
+
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>@TempData["Fail"].ToString()!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+}
+
 <div class="container justify-content-center mt-5">
     <h5 class="justify-content-center">Login de Usuario</h5>
     <div class="row">
@@ -36,7 +50,8 @@
                 </div>
                 <div class="form-group">
 
-                    <input asp-for="Dato" class="form-control" value="@ViewBag.datos" type="hidden" />
+                    @*<input asp-for="Dato" class="form-control" value="@ViewBag.datos" type="hidden" />*@
+                    <input asp-for="Dato" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosB")" type="hidden" />
 
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
