--- a/WebResumen/Views/Home/Index.cshtml
+++ b/WebResumen/Views/Home/Index.cshtml
@@ -15,15 +15,36 @@
     ViewBag.Title = "Login de Usuario";
 
 }
+@if (TempData["Fail"] != null)
+{
 
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>@TempData["Fail"].ToString()!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
 
+}
+
+@if (TempData["Grupo"] != null)
+{
+
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>@TempData["Grupo"].ToString()!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+}
 
 <div class="container justify-content-center mt-5">
     <h5 class="justify-content-center">Login de Usuario</h5>
     <div class="row">
         <div class="col-md-6">
             <form method="post">
-                @*<div asp-validation-summary="All" class="text-danger"></div>*@
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Usuario"></label>
                     <input asp-for="Usuario" class="form-control" />
