--- a/WebResumen/Views/MaestroAutoclave/Login.cshtml
+++ b/WebResumen/Views/MaestroAutoclave/Login.cshtml
@@ -8,7 +8,19 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor httpContextAccessor
+@if (TempData["Fail"] != null)
+{
 
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>@TempData["Fail"].ToString()!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+}
 
 
 <div class="container justify-content-center mt-5">
@@ -35,16 +47,16 @@
                 </div>
                 <div class="form-group">
 
-                    <input asp-for="Id" class="form-control" value="@ViewBag.maestro.Id" type="hidden" />
-                    <input asp-for="Matricula" class="form-control" value="@ViewBag.maestro.Matricula" type="hidden" />
-                    <input asp-for="Nombre" class="form-control" value="@ViewBag.maestro.Nombre" type="hidden" />
-                    <input asp-for="Version" class="form-control" value="@ViewBag.maestro.Version" type="hidden" />
-                    <input asp-for="Ip" class="form-control" value="@ViewBag.maestro.Ip" type="hidden" />
-                    <input asp-for="Seccion" class="form-control" value="@ViewBag.maestro.Seccion" type="hidden" />
-                    <input asp-for="Estado" class="form-control" value="@ViewBag.maestro.Estado" type="hidden" />
-                    <input asp-for="UltimoCiclo" class="form-control" value="@ViewBag.maestro.UltimoCiclo" type="hidden" />
-                    <input asp-for="RutaSalida" class="form-control" value="@ViewBag.maestro.RutaSalida" type="hidden" />
-                    <input asp-for="RutaSalidaPDF" class="form-control" value="@ViewBag.maestro.RutaSalidaPdf" type="hidden" />
+                    <input asp-for="Id" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosM")" type="hidden" />
+                    <input asp-for="Matricula" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionMatriculaM")" type="hidden" />
+                    <input asp-for="Nombre" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionNombreM")" type="hidden" />
+                    <input asp-for="Version" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionVersionM")" type="hidden" />
+                    <input asp-for="Ip" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionIpM")" type="hidden" />
+                    <input asp-for="Seccion" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionSeccionM")" type="hidden" />
+                    <input asp-for="Estado" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionEstadoM")" type="hidden" />
+                    <input asp-for="UltimoCiclo" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionUltimoCicloM")" type="hidden" />
+                    <input asp-for="RutaSalida" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionRutaSalidaM")" type="hidden" />
+                    <input asp-for="RutaSalidaPDF" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionRutaSalidaPDFM")" type="hidden" />
 
 
                 </div>
