--- a/WebResumen/Views/MaestroAutoclaveSup/Edit.cshtml
+++ b/WebResumen/Views/MaestroAutoclaveSup/Edit.cshtml
@@ -3,11 +3,15 @@
 @{
     ViewData["Title"] = "Editar";
 }
+
+@{
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
+}
 @using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor httpContextAccessor
 <h1>Editar</h1>
 
-<h4>Control Estado</h4>
+<h4>Control Estado @httpContextAccessor.HttpContext.Session.GetString("SessionNombreMS") </h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,28 +20,29 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 @*<label asp-for="Matricula" class="control-label"></label>*@
-                @Html.DisplayFor(model => model.Matricula, new { @readonly = true })
+                @*@Html.DisplayFor(model => model.Matricula, new { @readonly = true })
+                <label>@httpContextAccessor.HttpContext.Session.GetString("SessionMatriculaMS")</label>*@
                 <input asp-for="Matricula" class="form-control" type="hidden" value="@httpContextAccessor.HttpContext.Session.GetString("SessionMatriculaMS")" />
                 @*<span asp-validation-for="Matricula" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 @*<label asp-for="Nombre" class="control-label"></label>*@
-                <input asp-for="Nombre" class="form-control" type="hidden"value="@httpContextAccessor.HttpContext.Session.GetString("SessionNombreMS")" />
+                <input asp-for="Nombre" class="form-control" type="hidden" value="@httpContextAccessor.HttpContext.Session.GetString("SessionNombreMS")" />
                 @*<span asp-validation-for="Nombre" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 @*<label asp-for="Version" class="control-label"></label>*@
-                <input asp-for="Version" class="form-control" type="hidden"value="@httpContextAccessor.HttpContext.Session.GetString("SessionVersionMS")" />
+                <input asp-for="Version" class="form-control" type="hidden" value="@httpContextAccessor.HttpContext.Session.GetString("SessionVersionMS")" />
                 @*<span asp-validation-for="Version" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 @*<label asp-for="Ip" class="control-label"></label>*@
-                <input asp-for="Ip" class="form-control" type="hidden"value="@httpContextAccessor.HttpContext.Session.GetString("SessionIpMS")" />
+                <input asp-for="Ip" class="form-control" type="hidden" value="@httpContextAccessor.HttpContext.Session.GetString("SessionIpMS")" />
                 @*<span asp-validation-for="Ip" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 @*<label asp-for="Seccion" class="control-label"></label>*@
-                <input asp-for="Seccion" class="form-control" type="hidden"value="@httpContextAccessor.HttpContext.Session.GetString("SessionSeccionMS")" />
+                <input asp-for="Seccion" class="form-control" type="hidden" value="@httpContextAccessor.HttpContext.Session.GetString("SessionSeccionMS")" />
                 @*<span asp-validation-for="Seccion" class="text-danger"></span>*@
             </div>
             @*<div class="form-group">
@@ -47,8 +52,8 @@
                 </div>*@
             <label asp-for="Estado" class="control-label"></label>
             <select class="form-control" id="Estado" name="Estado">
-                <option value=True >True</option>
-                <option value="False">False</option>
+                <option value=True>Activar</option>
+                <option value="False">Desactivar</option>
             </select>
 
 
@@ -56,17 +61,17 @@
 
             <div class="form-group">
                 @*<label asp-for="UltimoCiclo" class="control-label"></label>*@
-                <input asp-for="UltimoCiclo" class="form-control" type="hidden"value="@httpContextAccessor.HttpContext.Session.GetString("SessionUltimoCicloMS")" />
+                <input asp-for="UltimoCiclo" class="form-control" type="hidden" value="@httpContextAccessor.HttpContext.Session.GetString("SessionUltimoCicloMS")" />
                 @*<span asp-validation-for="UltimoCiclo" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 @*<label asp-for="RutaSalida" class="control-label"></label>*@
-                <input asp-for="RutaSalida" class="form-control" type="hidden" value="@httpContextAccessor.HttpContext.Session.GetString("SessionRutaSalidaMS")"/>
+                <input asp-for="RutaSalida" class="form-control" type="hidden" value="@httpContextAccessor.HttpContext.Session.GetString("SessionRutaSalidaMS")" />
                 @*<span asp-validation-for="RutaSalida" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 @*<label asp-for="RutaSalidaPdf" class="control-label"></label>*@
-                <input asp-for="RutaSalidaPdf" class="form-control" type="hidden"value="@httpContextAccessor.HttpContext.Session.GetString("SessionRutaSalidaPDFMS")" />
+                <input asp-for="RutaSalidaPdf" class="form-control" type="hidden" value="@httpContextAccessor.HttpContext.Session.GetString("SessionRutaSalidaPDFMS")" />
                 @*<span asp-validation-for="RutaSalidaPdf" class="text-danger"></span>*@
             </div>
             <div class="form-group">
@@ -77,8 +82,8 @@
 </div>
 
 @*<div>
-    <a asp-action="Index">Volver</a>
-</div>*@
+        <a asp-action="Index">Volver</a>
+    </div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
