--- a/WebResumen/Views/Parametro/Login.cshtml
+++ b/WebResumen/Views/Parametro/Login.cshtml
@@ -8,7 +8,19 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor httpContextAccessor
+@if (TempData["Fail"] != null)
+{
 
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>@TempData["Fail"].ToString()!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+}
 
 
 <div class="container justify-content-center mt-5">
@@ -35,12 +47,20 @@
                 </div>
                 <div class="form-group">
 
-                    <input asp-for="Id" class="form-control" value="@ViewBag.datos.Id" type="hidden" />
+                    @*<input asp-for="Id" class="form-control" value="@ViewBag.datos.Id" type="hidden" />
                     <input asp-for="ImpresoraSabiUno" class="form-control" value="@ViewBag.datos.ImpresoraSabiUno" type="hidden" />
                     <input asp-for="ImpresoraSabiDos" class="form-control" value="@ViewBag.datos.ImpresoraSabiDos" type="hidden" />
                     <input asp-for="RutaLog" class="form-control" value="@ViewBag.datos.RutaLog" type="hidden" />
                     <input asp-for="Tiempo" class="form-control" value="@ViewBag.datos.Tiempo" type="hidden" />
-                    <input asp-for="Reinicio" class="form-control" value="@ViewBag.datos.Reinicio" type="hidden" />
+                    <input asp-for="Reinicio" class="form-control" value="@ViewBag.datos.Reinicio" type="hidden" />*@
+
+                    <input asp-for="Id" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosP")" type="hidden" />
+                    <input asp-for="ImpresoraSabiUno" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionImpresoraSabiUno")" type="hidden" />
+                    <input asp-for="ImpresoraSabiDos" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionImpresoraSabiDos")" type="hidden" />
+                    <input asp-for="RutaLog" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionRutaLog")" type="hidden" />
+                    <input asp-for="Tiempo" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetInt32("Tiempo")" type="hidden" />
+                    <input asp-for="Reinicio" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("Reinicio")" type="hidden" />
+
 
 
 
