--- a/WebResumen/Views/Shared/_Layout.cshtml
+++ b/WebResumen/Views/Shared/_Layout.cshtml
@@ -212,9 +212,9 @@
 
 
 
-    <script src="~/js/AngularJSApp/AutoClaveA/Module.js" asp-append-version="true"></script>
+    @*<script src="~/js/AngularJSApp/AutoClaveA/Module.js" asp-append-version="true"></script>
     <script src="~/js/AngularJSApp/AutoClaveA/Controller.js" asp-append-version="true"></script>
-    <script src="~/js/AngularJSApp/AutoClaveA/Service.js" asp-append-version="true"></script>
+    <script src="~/js/AngularJSApp/AutoClaveA/Service.js" asp-append-version="true"></script>*@
 
 
 
