--- a/WebResumen/Views/AutoClaveB/Index.cshtml
+++ b/WebResumen/Views/AutoClaveB/Index.cshtml
@@ -9,7 +9,17 @@
     8388B
 </h1>
 
+@if (TempData["Print"] != null)
+{
 
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>@TempData["Print"].ToString()!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+}
 
 
 <p>
@@ -249,7 +259,7 @@
                     <th>
                         @Html.DisplayNameFor(model => model.FechaRegistro)
                     </th>*@
-               
+
             </tr>
         </thead>
         <tbody>
