--- a/WebResumen/Views/AutoClaveD/Index.cshtml
+++ b/WebResumen/Views/AutoClaveD/Index.cshtml
@@ -11,6 +11,17 @@
 <p>
     @*<a asp-action="Create">Create New</a>*@
 </p>
+@if (TempData["Print"] != null)
+{
+
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>@TempData["Print"].ToString()!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+}
 @using (Html.BeginForm())
 {
     <p>
