--- a/WebResumen/Views/AutoClaveK/Index.cshtml
+++ b/WebResumen/Views/AutoClaveK/Index.cshtml
@@ -9,7 +9,17 @@
 <p>
     @*<a asp-action="Create">Create New</a>*@
 </p>
+@if (TempData["Print"] != null)
+{
 
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>@TempData["Print"].ToString()!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+}
 @using (Html.BeginForm())
 {
     <p>
@@ -32,7 +42,7 @@
 <div class="mt-4" style="height: 600px; overflow: auto;">
     <table class="table table-responsive-sm">
         <thead class="thead-dark">
-        
+
             <tr>
                 @*<th>
                         @Html.DisplayNameFor(model => model.IdAutoclave)
