--- a/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
@@ -32,14 +32,24 @@
 
 
 <body ng-app="datatablesAguaApp" ng-controller="aguaCtrl as tagapp">
+    <!--<div>
+
+        <label> Programa : <input ng-model="programa" /></label>
+        <label>  NªCiclo : <input ng-model="numeroCiclo" /></label>-->
+            @*<input type="button" value="Send" ng-click="postdata(programa, numeroCiclo)" /> <br /><br />*@
+            <!--<button href="#" type="button" value="Send" ng-click="postdata(programa, numeroCiclo)" class="btn btn-success btn-sm ">Buscar</button>
+
+    </div>-->
+
+
 
     @*<input type="search" class="form-control"
-           ng-model="searchText"
-           ng-change="searchTable()" />
+               ng-model="searchText"
+               ng-change="searchTable()" />
 
-    <input type="search" class="form-control"
-           ng-model="searchText"
-           ng-change="searchTable()" />*@
+        <input type="search" class="form-control"
+               ng-model="searchText"
+               ng-change="searchTable()" />*@
 
     <table id="example" datatable class=" table table-striped table-bordered table-sm"
            dt-options="dtOptions"
@@ -52,7 +62,7 @@
 
 
 
-   
+
 
 </body>
 
