--- a/WebResumen/Views/Parametro/Login.cshtml
+++ b/WebResumen/Views/Parametro/Login.cshtml
@@ -40,8 +40,8 @@
                     <span asp-validation-for="Contraseña" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Comentario"></label>
-                    @*<label>Motivo del Cambio</label>*@
+                    @*<label asp-for="Comentario"></label>*@
+                    <label>Motivo del Cambio</label>
                     <input asp-for="Comentario" class="form-control" />
                     <span asp-validation-for="Comentario" class="text-danger"></span>
                 </div>
