--- a/WebResumen/Views/Shared/_LayoutLogin.cshtml
+++ b/WebResumen/Views/Shared/_LayoutLogin.cshtml
@@ -50,9 +50,9 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <script src="~/js/AngularJSApp/AutoClaveA/Module.js" asp-append-version="true"></script>
+    @*<script src="~/js/AngularJSApp/AutoClaveA/Module.js" asp-append-version="true"></script>
     <script src="~/js/AngularJSApp/AutoClaveA/Controller.js" asp-append-version="true"></script>
-    <script src="~/js/AngularJSApp/AutoClaveA/Service.js" asp-append-version="true"></script>
+    <script src="~/js/AngularJSApp/AutoClaveA/Service.js" asp-append-version="true"></script>*@
 
 
     @RenderSection("Scripts", required: true)
