Se agregan Filtros de Busqueda Agua y Vapor

--- a/WebResumen/Views/Inicio/Index.cshtml
+++ b/WebResumen/Views/Inicio/Index.cshtml
@@ -11,7 +11,7 @@
 
 
 <div class="text-center">
-    <h1 class="">Autoclaves Baxter</h1>
+    <h1 class="">Autoclaves Baxter Sabiñánigo</h1>
 
    
 </div>
@@ -27,9 +27,10 @@
 
 
 
-
+  
     <div class="row mb-2">
         <div class="col-md-6">
+            <h4 class="text-center font-weight-bold">SABI I</h4>
             <table class="table table-sm  ">
                 <thead class="thead-dark">
                     <tr>
@@ -155,7 +156,9 @@
             </table>
         </div>
 
+        
         <div class="col-md-6">
+            <h4 class="text-center font-weight-bold">SABI II</h4>
             <table class="table table-sm ">
                 <thead class="thead-dark">
                     <tr>
