--- a/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
@@ -32,24 +32,74 @@
 
 
 <body ng-app="datatablesAguaApp" ng-controller="aguaCtrl as tagapp">
-    <!--<div>
+   
 
-        <label> Programa : <input ng-model="programa" /></label>
-        <label>  NªCiclo : <input ng-model="numeroCiclo" /></label>-->
-            @*<input type="button" value="Send" ng-click="postdata(programa, numeroCiclo)" /> <br /><br />*@
-            <!--<button href="#" type="button" value="Send" ng-click="postdata(programa, numeroCiclo)" class="btn btn-success btn-sm ">Buscar</button>
-
-    </div>-->
-
-
-
-    @*<input type="search" class="form-control"
-               ng-model="searchText"
-               ng-change="searchTable()" />
-
-        <input type="search" class="form-control"
-               ng-model="searchText"
-               ng-change="searchTable()" />*@
+    <table cellpadding="3" cellspacing="0" border="0" style="width: 67%; margin: 0 auto 2em auto;">
+        <thead>
+            <tr>
+                <th>Target</th>
+                <th>Buscar</th>
+                <th>Treat as regex</th>
+                <th>Use smart search</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr id="filter_global">
+                <td>Busqueda Global</td>
+                <td align="center"><input type="text" class="global_filter" id="global_filter"></td>
+                <td align="center"><input type="checkbox" class="global_filter" id="global_regex"></td>
+                <td align="center"><input type="checkbox" class="global_filter" id="global_smart" checked="checked"></td>
+            </tr>
+            @*<tr id="filter_col1" data-column="0">
+            <td>Column - Id</td>
+            <td align="center"><input type="text" class="column_filter" id="col0_filter"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col0_regex"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col0_smart" checked="checked"></td>
+        </tr>*@
+            <tr id="filter_col2" data-column="1">
+                <td>IdAutoclave </td>
+                <td align="center"><input type="text" class="column_filter" id="col1_filter"></td>
+                <td align="center"><input type="checkbox" class="column_filter" id="col1_regex"></td>
+                <td align="center"><input type="checkbox" class="column_filter" id="col1_smart" checked="checked"></td>
+            </tr>
+            @*<tr id="filter_col3" data-column="2">
+            <td>Carro</td>
+            <td align="center"><input type="text" class="column_filter" id="col2_filter"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col2_regex"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col2_smart" checked="checked"></td>
+        </tr>*@
+            <tr id="filter_col4" data-column="3">
+                <td>N Progresivo</td>
+                <td align="center"><input type="text" class="column_filter" id="col3_filter"></td>
+                <td align="center"><input type="checkbox" class="column_filter" id="col3_regex"></td>
+                <td align="center"><input type="checkbox" class="column_filter" id="col3_smart" checked="checked"></td>
+            </tr>
+            <tr id="filter_col5" data-column="4">
+                <td>Programa</td>
+                <td align="center"><input type="text" class="column_filter" id="col4_filter"></td>
+                <td align="center"><input type="checkbox" class="column_filter" id="col4_regex"></td>
+                <td align="center"><input type="checkbox" class="column_filter" id="col4_smart" checked="checked"></td>
+            </tr>
+            @*<tr id="filter_col6" data-column="5">
+                <td>Cod.Producto</td>
+                <td align="center"><input type="text" class="column_filter" id="col5_filter"></td>
+                <td align="center"><input type="checkbox" class="column_filter" id="col5_regex"></td>
+                <td align="center"><input type="checkbox" class="column_filter" id="col5_smart" checked="checked"></td>
+            </tr>*@
+            <tr id="filter_col8" data-column="7">
+                <td>Hora Inicio</td>
+                <td align="center"><input type="text" class="column_filter" id="col7_filter"></td>
+                <td align="center"><input type="checkbox" class="column_filter" id="col7_regex"></td>
+                <td align="center"><input type="checkbox" class="column_filter" id="col7_smart" checked="checked"></td>
+            </tr>
+            <tr id="filter_col9" data-column="8">
+                <td>Hora Fin</td>
+                <td align="center"><input type="datetime" class="column_filter" id="col8_filter"></td>
+                <td align="center"><input type="checkbox" class="column_filter" id="col8_regex"></td>
+                <td align="center"><input type="checkbox" class="column_filter" id="col8_smart" checked="checked"></td>
+            </tr>
+        </tbody>
+    </table>
 
     <table id="example" datatable class=" table table-striped table-bordered table-sm"
            dt-options="dtOptions"
@@ -57,6 +107,14 @@
            dt-instance="dtInstance">
         <thead class="thead-dark">
         </thead>
+        @*<tfoot>
+            <tr>
+                <th>#</th>
+                <th>idAutoclave</th>
+                <th>N.Carro</th>
+                <th>N.Progresivo</th>
+            </tr>
+        </tfoot>*@
 
     </table>
 
@@ -70,87 +128,6 @@
 
 
 
-
-
-
-
-
-
-@*<body ng-app="Myapp" ng-controller="Mycontroller">
-        <label>Buscar por Nombre <input ng-model="search.idAutoclave"></label><br>    <label>Buscar por Progama <input ng-model="search.programa"></label><br>
-
-        <table id="dtHorizontalVerticalExample" class="table table-striped table-bordered  " cellspacing="0" style="width:150%">
-            <thead>
-                <tr>
-                    <th>ID Autoclave</th>
-                    <th>PROGRAMA  </th>
-
-                </tr>
-            </thead>
-            <tr ng-repeat="x in searchid | filter:search">
-                <td>{{x.idAutoclave}}</td>
-                <td>{{x.programa}}</td>
-            </tr>
-
-
-
-        </table>
-
-
-    </body>*@
-@*<div class="container-fluid">
-        <table id="dtHorizontalVerticalExample" class="table table-striped table-bordered  " cellspacing="0" style="width:150%">
-            <thead>
-                <tr>
-
-                    <th>ID Autoclave</th>
-                    <th>Nº Carro                  </th>
-                    <th>Nº Progesivo</th>
-                    <th>Nº Programa</th>
-                    <th>Código Producto</th>
-                    <th>Nº de lote</th>
-                    <th>Hora Comienzo </th>
-                    <th>Hora Fin </th>
-                    <th>Tiempo F1</th>
-                    <th>Tiempo F2</th>
-                    <th>Tiempo F3</th>
-                    <th>Tiempo F4</th>
-                    <th>Tiempo F5</th>
-                    <th>Presión final F5</th>
-                    <th>Tiempo F6</th>
-                    <th>Presión Inicial F6</th>
-                    <th>TE2 F6I</th>
-                    <th>TE3 F6I</th>
-                    <th>TE4 F6I</th>
-                    <th>Presión Final F6</th>
-                    <th>TE2 F6F</th>
-                    <th>TE3 F6F</th>
-                    <th>TE4 F6F</th>
-                    <th>TE2Fo F6</th>
-                    <th>TE3Fo F6</th>
-                    <th>TE4Fo F6</th>
-                    <th>Tmínima de esterilización</th>
-                    <th>Tmáxima de esterilización</th>
-                    <th>Tiempo F7</th>
-                    <th>Presión Final F7</th>
-                    <th>Tiempo F8</th>
-                    <th>Tiempo F9</th>
-                    <th>Tiempo F10</th>
-                    <th>Tiempo F11</th>
-                    <th>Tiempo F12</th>
-                    <th>T.TOTAL</th>
-                    <th>T.TOTAL CALCULADO</th>
-                    <th>TE2Fo F13</th>
-                    <th>TE3Fo F13</th>
-                    <th>TE4Fo F13</th>
-                    <th>DIF FoMax-FoMin</th>
-
-
-                </tr>
-            </thead>
-            <tbody class="tbody"></tbody>
-        </table>
-    </div>*@
 
 
 
